@@ -1,15 +1,15 @@
 Package: Peptides
-Version: 1.0.3
-Date: 2014-12-14
+Version: 1.0.4
+Date: 2015-04-30
 Title: Calculate Indices and Theoretical Properties of Protein
         Sequences
 Author: Daniel Osorio, Paola Rondon-Villarreal and Rodrigo Torres.
 Maintainer: Daniel Osorio <daniel.osorio@correo.uis.edu.co>
 URL: https://github.com/dosorio/Peptides/
 Suggests: RUnit
-Description: Calculate physicochemical properties and indices from amino-acid sequences of peptides and proteins. Include also the option to read and plot XVG output files from GROMACS molecular dynamics package.
+Description: Calculate physicochemical properties and indices from amino-acid sequences of peptides and proteins. Include also the option to read and plot output files from the 'GROMACS' molecular dynamics package.
 License: GPL-2
-Packaged: 2014-12-15 04:22:36 UTC; Daniel
+Packaged: 2015-04-30 11:50:13 UTC; Daniel
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-12-15 07:23:11
+Date/Publication: 2015-04-30 20:34:38
