@@ -1,17 +1,17 @@
-75319997cca5d9679cf219913a413bb8 *DESCRIPTION
-8b54e5a89fbda3af5e077053d40bec76 *NAMESPACE
-c580a53a254234c7ebfad12edeff8570 *NEWS
-025ce195fce3b039e66f6d77669f3e2e *R/AAcomp.R
-41985c786ec786ac8c807832de4332db *R/Boman.R
-0f9039fdf8519caf93418dcc8adafefa *R/MW.R
-d9ef5d054e27adfbd22deb331cee8b19 *R/aindex.R
-821f0b7174334033b811d5a6ac6c6af0 *R/charge.R
-b10a18beab914220a8797123901a8bd6 *R/hmoment.R
-bb03438bb583132a77f6e983e58821bc *R/hydrophobicity.R
-9dbc5915991bc6d7a13903bbd453b467 *R/instaindex.R
-d01123601c13d7122ed8b30297bc5e80 *R/lengthpep.R
-c527dc4d655b3347e6c65f74e2d85b57 *R/membpos.R
-2834e4e819bec987983bb2b1616be8ad *R/pI.R
+30677e885431b363bbf91cb83f92ba4c *DESCRIPTION
+16b48259136cdcf2f17862e73a2cd56a *NAMESPACE
+8c1f6400e06e0bf57ecd8d83a1070eb0 *NEWS
+9856856011f101b6ba4e536b4b1d910b *R/AAcomp.R
+94d4a1c0d3186e21d46903e5ef301a93 *R/Boman.R
+216e196a3ccdc27b50eb106217f68bd2 *R/MW.R
+896f9bb5517ba039baf1076c928eb489 *R/aindex.R
+01d85e2e3b4042792d420ddc3a0e2a13 *R/charge.R
+f496408a4ad9e396696e8a77612c9747 *R/hmoment.R
+665cae8f4adb6c8df36ac7fd3bd20374 *R/hydrophobicity.R
+78994762eec0c29f58c3a1a8477e75c3 *R/instaindex.R
+8114374a520fc7d1401176848cd35c7a *R/lengthpep.R
+6b9767056911963a68a4c2f1f0c0882e *R/membpos.R
+0af7b876832d499acc63933a16089cb5 *R/pI.R
 d542b6713bb074d7e9af4f05adc2a15b *R/plot.xvg.R
 92224fb486563bd98be094e64d7de3f1 *R/read.xvg.R
 872fdf7b1e7790d43d81b92a659b3f55 *data/H.RData
@@ -37,7 +37,7 @@ c6a2b6ff9f0a7583e69fc3df652bda0f *man/AAcomp.Rd
 acf9d11ece3ffadab3755a37b35ec7b5 *man/Boman.Rd
 df361e348167f2adc9c90972e6a75e54 *man/MW.Rd
 ca2f796983de79f04b68d44e6d2bbc3c *man/Pepdata.Rd
-a1713243653e273d600351b72b929ad4 *man/Peptides-package.Rd
+80d70ef916325f588d40952cf59a2de3 *man/Peptides-package.Rd
 abf85db4e18a2f3050f6a55829bfe202 *man/aindex.Rd
 e5622159b956d2db77cfd3a746158f18 *man/charge.Rd
 74343df2157bd3ccbe2ba5a8f2da094d *man/h.Rd
