@@ -1,1 +1,3 @@
 exportPattern("^[[:alpha:]]+")
+
+S3method(plot,xvg)
