@@ -5,6 +5,7 @@
 # In The proteomics protocols handbook (pp. 571-607). Humana Press.
 
 mw<-function(seq){
+  seq<-gsub("[\r\n]","",seq)
   # Create the weight scale
   weight<-c(A=71.0788, R=156.1875, N=114.1038, D=115.0886, C=103.1388, E=129.1155, Q=128.1307, 
             G=57.0519, H=137.1411, I=113.1594, L=113.1594, K=128.1741, M=131.1926, F=147.1766, 
