@@ -5,15 +5,15 @@
 Calculate Indices and Theoretical Properties of Protein Sequences
 }
 \description{
-Calculate physicochemical properties and indices from amino-acid sequences of peptides 
-and proteins. Include also the option to read and plot XVG output files from GROMACS molecular dynamics package.
+Calculate physicochemical properties and indices from amino-acid sequences of peptides
+and proteins. Include also the option to read and plot output files from the 'GROMACS' molecular dynamics package.
 }
 \details{
 \tabular{ll}{
 Package: \tab Peptides\cr
 Type: \tab Package\cr
-Version: \tab 1.0.3\cr
-Date: \tab 2014-12-12\cr
+Version: \tab 1.0.4\cr
+Date: \tab 2015-04-30\cr
 License: \tab GPL-2\cr
 }
 }
